# agentic-search

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
eval/: questions.jsonl
scripts/: chunk_wiki.py  download_wiki.py  embed_and_upload.py
src/: config.rs  main.rs
src/agent/: mod.rs  planner.rs  reader.rs  synthesizer.rs
src/instrumentation/: logger.rs  mod.rs
src/llm/: anthropic.rs  client.rs  mod.rs
src/retrieval/: embedder.rs  mod.rs  qdrant.rs
